conformal via SLIM attempt

--- a/conformal_map_hulls.ipynb
+++ b/conformal_map_hulls.ipynb
@@ -11,31 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded Z:\\Zack\\Data\\Incoming\\Cat_parametric_study\\High_Fidelity\\RUN001\\case.foam\n",
-      "Loaded Z:\\Zack\\Data\\Incoming\\Cat_parametric_study\\High_Fidelity\\RUN002\\case.foam\n",
-      "Loaded Z:\\Zack\\Data\\Incoming\\Cat_parametric_study\\High_Fidelity\\RUN003\\case.foam\n",
-      "Loaded Z:\\Zack\\Data\\Incoming\\Cat_parametric_study\\High_Fidelity\\RUN004\\case.foam\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(foam_file):\n\u001b[0;32m     16\u001b[0m     reader \u001b[38;5;241m=\u001b[39m pv\u001b[38;5;241m.\u001b[39mOpenFOAMReader(foam_file)\n\u001b[1;32m---> 17\u001b[0m     mesh \u001b[38;5;241m=\u001b[39m reader\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     18\u001b[0m     cases[folder_name] \u001b[38;5;241m=\u001b[39m mesh\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoaded \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfoam_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\zack\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyvista\\core\\utilities\\reader.py:409\u001b[0m, in \u001b[0;36mBaseReader.read\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    406\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilters\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _update_alg  \u001b[38;5;66;03m# avoid circular import\u001b[39;00m\n\u001b[0;32m    408\u001b[0m _update_alg(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreader, progress_bar\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_progress_bar, message\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_progress_msg)\n\u001b[1;32m--> 409\u001b[0m data \u001b[38;5;241m=\u001b[39m wrap(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreader\u001b[38;5;241m.\u001b[39mGetOutputDataObject(\u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m    410\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n\u001b[0;32m    411\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile reader failed to read and/or produced no output.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\zack\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pyvista\\core\\utilities\\reader.py:341\u001b[0m, in \u001b[0;36mBaseReader.reader\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    328\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Hide the progress bar when loading the file.\u001b[39;00m\n\u001b[0;32m    329\u001b[0m \n\u001b[0;32m    330\u001b[0m \u001b[38;5;124;03m    Examples\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    337\u001b[0m \n\u001b[0;32m    338\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m    339\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_progress_bar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m--> 341\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[0;32m    342\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreader\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    343\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the vtk Reader object.\u001b[39;00m\n\u001b[0;32m    344\u001b[0m \n\u001b[0;32m    345\u001b[0m \u001b[38;5;124;03m    Returns\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    349\u001b[0m \n\u001b[0;32m    350\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m    351\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pyvista as pv\n",
@@ -76,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:Input for connection index 0 on input port index 0 for algorithm vtkFeatureEdges (000001D163C2C980) is of type vtkUnstructuredGrid, but a vtkPolyData is required.\n"
+      "ERROR:root:Input for connection index 0 on input port index 0 for algorithm vtkFeatureEdges (000001DE21868950) is of type vtkUnstructuredGrid, but a vtkPolyData is required.\n"
      ]
     },
     {
@@ -84,32 +60,27 @@
      "output_type": "stream",
      "text": [
       "Non-manifold edge count: 0\n",
-      "Using circle boundary + harmonic mapping...\n",
-      "UV mapping success. uv shape: (470410, 2)\n",
-      "3D Pressure at bow: -2.0719278\n",
-      "UV Pressure at bow: -2.0719278\n"
+      "Boundary loop size: 3528 vertices.\n",
+      "Using SLIM for mapping...\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9adfd8dfc64040f799d85cdc597c4607",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:60116/index.html?ui=P_0x1d253d97920_2&reconnect=auto\" class=\"pyvis…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "AttributeError",
+     "evalue": "module 'igl' has no attribute 'SLIMData'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 124\u001b[0m\n\u001b[0;32m    121\u001b[0m handle_coords \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m0.0\u001b[39m, \u001b[38;5;241m0.0\u001b[39m], [\u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;241m0.0\u001b[39m]], dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat64)\n\u001b[0;32m    123\u001b[0m \u001b[38;5;66;03m# Initialize SLIM data\u001b[39;00m\n\u001b[1;32m--> 124\u001b[0m slim_data \u001b[38;5;241m=\u001b[39m igl\u001b[38;5;241m.\u001b[39mSLIMData()\n\u001b[0;32m    125\u001b[0m \u001b[38;5;66;03m# e.g. an energy type that tries to preserve angles\u001b[39;00m\n\u001b[0;32m    126\u001b[0m \u001b[38;5;66;03m# possible: SLIM_ENERGY_TYPE_ARAP, SLIM_ENERGY_TYPE_CONFORMAL, ...\u001b[39;00m\n\u001b[0;32m    127\u001b[0m \u001b[38;5;66;03m# We'll pick conformal:\u001b[39;00m\n\u001b[0;32m    128\u001b[0m energy_type \u001b[38;5;241m=\u001b[39m igl\u001b[38;5;241m.\u001b[39mSLIM_ENERGY_TYPE_CONFORMAL\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'igl' has no attribute 'SLIMData'"
+     ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "ERROR:asyncio:Task exception was never retrieved\n",
-      "future: <Task finished name='Task-457' coro=<WebSocketWriter.ping() done, defined at c:\\Users\\zack\\AppData\\Local\\anaconda3\\Lib\\site-packages\\aiohttp\\http_websocket.py:711> exception=ConnectionResetError('Cannot write to closing transport')>\n",
+      "future: <Task finished name='Task-326' coro=<WebSocketWriter.ping() done, defined at c:\\Users\\zack\\AppData\\Local\\anaconda3\\Lib\\site-packages\\aiohttp\\http_websocket.py:711> exception=ConnectionResetError('Cannot write to closing transport')>\n",
       "Traceback (most recent call last):\n",
       "  File \"c:\\Users\\zack\\AppData\\Local\\anaconda3\\Lib\\asyncio\\tasks.py\", line 314, in __step_run_and_handle_result\n",
       "    result = coro.send(None)\n",
@@ -128,6 +99,8 @@
     "import vtk \n",
     "import igl \n",
     "import numpy as np\n",
+    "import pyvista as pv\n",
+    "\n",
     "\n",
     "# Load the OpenFOAM case file\n",
     "reader = vtk.vtkOpenFOAMReader()\n",
@@ -149,6 +122,7 @@
     "\n",
     "# Toggle to True if you want LSCM instead of Harmonic\n",
     "LSCM = False\n",
+    "SLIM = True      # If True: use SLIM\n",
     "\n",
     "############################\n",
     "# OPTIONAL: Clip the top\n",
@@ -172,7 +146,6 @@
     "            poly = poly.cell_data_to_point_data()\n",
     "        hull_meshes.append(poly)\n",
     "        \n",
-    "\n",
     "\n",
     "# Combine & surface\n",
     "hull_mesh = pv.MultiBlock(hull_meshes).combine().extract_surface().triangulate()\n",
@@ -227,8 +200,46 @@
     "# Param: LSCM vs. Harmonic\n",
     "############################\n",
     "bnd = igl.boundary_loop(f)\n",
+    "print(f\"Boundary loop size: {len(bnd)} vertices.\")\n",
     "\n",
-    "if LSCM:\n",
+    "#TODO: SLIM does not seem to be available in the igl module for python. \n",
+    "#TODO: LSCM is a good option for boundary free conformal mapping (which might be useufl for capturing changing geometries when doing POD)\n",
+    "#TODO: it seems LSCM does not work when clipping top (as seen on northsea example - we need to test on Bill's run with extra patch)\n",
+    "if SLIM:\n",
+    "    # 6A) SLIM Approach\n",
+    "    # - We can fix two boundary points if we want constraints,\n",
+    "    #   or pass an empty constraint if we want a free boundary.\n",
+    "    print(\"Using SLIM for mapping...\")\n",
+    "\n",
+    "    # For example, fix bow/stern along x:\n",
+    "    boundary_coords = v[bnd]\n",
+    "    bow_idx_local   = np.argmin(boundary_coords[:, 0])\n",
+    "    stern_idx_local = np.argmax(boundary_coords[:, 0])\n",
+    "    bow_idx    = bnd[bow_idx_local]\n",
+    "    stern_idx  = bnd[stern_idx_local]\n",
+    "\n",
+    "    handle_ids = np.array([bow_idx, stern_idx], dtype=np.int32)\n",
+    "    handle_coords = np.array([[0.0, 0.0], [1.0, 0.0]], dtype=np.float64)\n",
+    "\n",
+    "    # Initialize SLIM data\n",
+    "    slim_data = igl.SLIMData()\n",
+    "    # e.g. an energy type that tries to preserve angles\n",
+    "    # possible: SLIM_ENERGY_TYPE_ARAP, SLIM_ENERGY_TYPE_CONFORMAL, ...\n",
+    "    # We'll pick conformal:\n",
+    "    energy_type = igl.SLIM_ENERGY_TYPE_CONFORMAL\n",
+    "\n",
+    "    # SLIM init\n",
+    "    igl.slim_initialize(v, f, handle_ids, handle_coords, energy_type, slim_data)\n",
+    "    # Solve iteratively\n",
+    "    n_iters = 10\n",
+    "    for _ in range(n_iters):\n",
+    "        igl.slim_solve(slim_data)\n",
+    "\n",
+    "    uv = slim_data.mesh_im  # Nx2 final result\n",
+    "\n",
+    "elif LSCM:\n",
+    "    print(\"Using LSCM for mapping...\")\n",
+    "    \n",
     "    # LSCM with two anchor points\n",
     "    boundary_coords = v[bnd]\n",
     "    bow_idx_local = np.argmin(boundary_coords[:, 0])  # min X\n",
@@ -240,7 +251,6 @@
     "    bc = np.array([[0.0, 0.0], [1.0, 0.0]])\n",
     "\n",
     "    # Attempt LSCM\n",
-    "    print(\"Using LSCM for mapping...\")\n",
     "    _, uv = igl.lscm(v, f, b, bc)\n",
     "    if uv.shape[0] == 0:\n",
     "        raise RuntimeError(\"LSCM returned an empty UV map.\")\n",
@@ -287,7 +297,6 @@
     "plotter.add_mesh(uv_mesh, scalars=\"p\", clim=clim_uv, cmap=\"coolwarm\", show_edges=True)\n",
     "plotter.add_points(uv_mesh.points[idx_bow], style='points', cmap = 'blue', point_size=10)\n",
     "plotter.add_text(\"UV Map with p\", font_size=10)\n",
-    "\n",
     "\n",
     "plotter.show()"
    ]
